Adding missing codes + updating code

--- a/force-app/main/default/classes/DeliveryTriggerHandler.cls
+++ b/force-app/main/default/classes/DeliveryTriggerHandler.cls
@@ -10,26 +10,22 @@ public class DeliveryTriggerHandler {
             truckIdList.add(truck.Truck__c);
         }
         
-        List<Truck__c> truckList = [SELECT Id, Status__c
-                                    FROM Truck__c
-                                    WHERE Id IN :truckIdList];
-        
         for(Delivery__c del : deliList){
-            for(Truck__c truck : truckList){
-                if(del.Status__c == 'Parked' || del.Status__c == 'En-route'){
-                    truck.Status__c = 'On Delivery';
-                    updateTruck.add(truck);
-                }
-                else if(del.Status__c == 'Completed'){
-                    truck.Status__c = 'Parked';
-                    truck.Current_Location__c = del.To_Warehouse__c;
-                    updateTruck.add(truck);
-                }
+            Truck__c trk = new Truck__c(); 
+            trk.Id = del.Truck__c;
+            if(del.Status__c == 'Parked' || del.Status__c == 'En-route'){
+                trk.Status__c = 'On Delivery';
+                updateTruck.add(trk);
             }
-                
+            else if(del.Status__c == 'Completed'){
+                trk.Status__c = 'Parked';
+                trk.Current_Location__c = del.To_Warehouse__c;
+                updateTruck.add(trk);
+            }
         }
         //bulkify update
-        update truckList; 
+        if(updateTruck != null & updateTruck.size() > 0)
+            update updateTruck; 
     }
 
 }
